--- a/.env
+++ b/.env
@@ -21,7 +21,10 @@ AWS_S3_BUCKET=
 AWS_S3_KEY_PREFIX=
 
 # ---- Pipeline flags ----
-# Write SQLite DB here (mounted via the 'db' volume)
+DATA_DIR=/app/data
+CACHE_DIR=/app/cache
+OUT_DIR=/app/hf_models
 DB_PATH=/app/db/models.db
+
 # Upload each file to MinIO immediately during download (1=on, 0=off)
 DIRECT_UPLOAD=1
