Added additional works

--- a/.env
+++ b/.env
@@ -28,3 +28,4 @@ DB_PATH=/app/db/models.db
 
 # Upload each file to MinIO immediately during download (1=on, 0=off)
 DIRECT_UPLOAD=1
+REGISTRY_API_KEY=dev-please-change
