--- a/.env
+++ b/.env
@@ -9,18 +9,20 @@ MINIO_ROOT_USER=minioadmin
 MINIO_ROOT_PASSWORD=minioadmin
 MINIO_BUCKET=models
 MINIO_REGION=us-east-1
+
 MINIO_URL=http://minio:9000
-# Optional prefix inside the bucket (e.g., org/project/date). Leave empty to upload at bucket root.
-MINIO_KEY_PREFIX=
+
 MINIO_ENDPOINT=minio:9000       # or http://minio:9000
 MINIO_SECURE=false
 MINIO_BUCKET=models
 MINIO_ALIAS=minio               # used as the mc alias name
-MINIO_ROOT_USER=minioadmin
-MINIO_ROOT_PASSWORD=minioadmin
+
+# Optional prefix inside the bucket (e.g., org/project/date). Leave empty to upload at bucket root.
+MINIO_KEY_PREFIX=
 MINIO_ACCESS_KEY=${MINIO_ROOT_USER}
 MINIO_SECRET_KEY=${MINIO_ROOT_PASSWORD}
-MINIO_PREFIX=                    # optional, e.g. artifacts/2025-09-03
+MINIO_PREFIX=
+
 # ---- External AWS S3 backup (optional) ----
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
